Complete all CRUD logic for Products and Categories. Add auto-generate docs by Swaggo.
