# handlers/categorias/delete.go
@@ -2,17 +2,31 @@ package handlers
 
 import (
 	"net/http"
-	services "pos-backend/services/categorias"
+	categorias "pos-backend/services/categorias"
+
+	"github.com/gorilla/mux"
 )
 
-func DeleteCategoryHandler(categoryService services.CategoryService) http.HandlerFunc {
+// DeleteCategoryHandler maneja las solicitudes para eliminar una categoría
+// @Summary Eliminar una categoría
+// @Description Elimina una categoría del sistema
+// @Tags Categorías
+// @Param id query string true "ID de la categoría a eliminar"
+// @Success 200 "Categoría eliminada"
+// @Failure 400 "Se requiere el ID de la categoría"
+// @Failure 500 "Error al eliminar la categoría"
+// @Router /categorias [delete]
+func DeleteCategoryHandler(categoryService categorias.CategoryService) http.HandlerFunc {
 	return func(w http.ResponseWriter, r *http.Request) {
-		categoryID := r.URL.Query().Get("id")
+		// Obtiene el ID de la categoría de los parámetros de la URL
+		vars := mux.Vars(r)
+		categoryID := vars["id"]
 		if categoryID == "" {
-			http.Error(w, "Se requiere el ID de la categoría", http.StatusBadRequest)
+			http.Error(w, "Se requiere el ID de la categoría en la URL", http.StatusBadRequest)
 			return
 		}
 
+		// Elimina la categoría utilizando el servicio
 		err := categoryService.DeleteCategory(categoryID)
 		if err != nil {
 			http.Error(w, "Error al eliminar la categoría", http.StatusInternalServerError)
